Add JDK16 workaround in embedded Kotlin tests